@@ -7,6 +7,9 @@ Changelog
 - Disable CSRF protection when creating a scale so we can write to the database
   [vangheem]
 
+- Validate image field : check if content is actually an image using mimetype.
+  [thomasdesvenain]
+
 - Fix: get_contenttype works when empty string is given as contentType.
   [thomasdesvenain]
 
